TODO training step

--- a/torchdyn.ipynb
+++ b/torchdyn.ipynb
@@ -430,6 +430,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7a1a9ad2-c730-4a04-8b17-a79c2664c0d3",
+   "metadata": {},
+   "source": [
+    "TODO: Subclass training_step and replace with https://github.com/huggingface/transformers/blob/v4.19.0/src/transformers/trainer.py#L2156"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "2de41a42-6ed3-4f00-a731-95972d203526",
