Implement gradcheck test (passed)
In the deq_tests.ipynb notebook. Also fixed the torch.solver deprecation warning.

--- a/dataset_testing.ipynb
+++ b/dataset_testing.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "5a557460-be49-4ab4-b8d3-f82864c2661d",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "from transformers import AutoTokenizer\n",
@@ -15,7 +19,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "1689021c-8677-43b0-aac5-0cb0d6726f01",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "dm = OSCARDataModule(tokenizer=AutoTokenizer.from_pretrained(\"bert-base-uncased\"))\n",
@@ -26,7 +34,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "f75617f9-805f-4cff-8e12-000ba8d1f172",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
