--- a/torchdyn.ipynb
+++ b/torchdyn.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "7357cda9-067d-481d-a927-266b698af2e8",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "from torchdyn.core import NeuralODE\n",
@@ -26,7 +30,11 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "4b24ec1c-4c68-4a1d-a779-7d34e9479fe0",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -49,7 +57,11 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "4d4b3c33-a98c-4e65-98a3-f2e341df61dc",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -69,7 +81,11 @@
   {
    "cell_type": "markdown",
    "id": "7021a030-e598-47b8-a3b2-e4f612e93019",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "TODO: Subclass roberta model such that the encoder residual connections are ODEs\n",
     "\n",
@@ -85,7 +101,10 @@
     "jupyter": {
      "outputs_hidden": true
     },
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -529,7 +548,11 @@
   {
    "cell_type": "markdown",
    "id": "50a48e99-c2eb-46bb-89d6-233ef3f3750d",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Thanks documentation! https://pytorch-lightning.readthedocs.io/en/latest/notebooks/lightning_examples/text-transformers.html"
    ]
@@ -538,7 +561,11 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "e404d97f-9f90-4145-b666-e5d63adefe33",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -559,7 +586,11 @@
   {
    "cell_type": "markdown",
    "id": "7a1a9ad2-c730-4a04-8b17-a79c2664c0d3",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "BERT won't work since it needs NSP implemented and I'm too lazy to do anything other than MLM. We can just use roberta for masked LM which only needs MLM."
    ]
@@ -568,7 +599,11 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "2de41a42-6ed3-4f00-a731-95972d203526",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "class Learner(LightningModule):\n",
@@ -609,7 +644,11 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "6564c78c-7818-4ddd-988f-73f4173e1a5b",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -636,7 +675,10 @@
     "jupyter": {
      "outputs_hidden": true
     },
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -1064,7 +1106,11 @@
    "cell_type": "code",
    "execution_count": 24,
    "id": "52b69dea-55b5-4b4f-99ec-4ef95155700e",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
