--- a/RobertaModel Debug.ipynb
+++ b/RobertaModel Debug.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "6db5df78-ec48-47d7-ab8b-7133cdf8aa95",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "from roberta import RobertaModel\n",
@@ -16,7 +20,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "152933a4-3bc7-4fef-8054-f537377c9816",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "#tokenizer = RobertaTokenizer.from_pretrained(\"roberta-base\")\n",
@@ -29,7 +37,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "55c38d06-26d4-493b-b5dc-0cdbb13c0744",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -203,7 +215,11 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "45d89b44-1ee5-426a-ae93-f8b717e3fdea",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -226,7 +242,10 @@
    "execution_count": 5,
    "id": "4a4a475a-aa13-45bd-aaea-c3a4e2849b09",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
