Update DEQTests fill_mask pipeline using trained model
it does pretty well

--- a/deq_tests.ipynb
+++ b/deq_tests.ipynb
@@ -1528,16 +1528,128 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "248733b5-8213-44e9-ba32-ff8617bc24ca",
+   "cell_type": "markdown",
+   "source": [
+    "# Testing the trained model"
+   ],
    "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [],
+   "source": [
+    "from DEQBert.modeling_deqbert import DEQBertForMaskedLM, DEQBertConfig\n",
+    "from DEQBert.tokenization_deqbert import DEQBertTokenizer\n",
+    "from transformers import pipeline"
+   ],
+   "metadata": {
+    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   },
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "outputs": [],
-   "source": []
+   "source": [
+    "config_path = \"DEQBert/model_card/config.json\"\n",
+    "model_path = \"models/base/checkpoint-45000\""
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "The tokenizer class you load from this checkpoint is not the same type as the class this function is called from. It may result in unexpected tokenization. \n",
+      "The tokenizer class you load from this checkpoint is 'RobertaTokenizer'. \n",
+      "The class this function is called from is 'DEQBertTokenizer'.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# initialise the configs\n",
+    "config = DEQBertConfig.from_pretrained(config_path)\n",
+    "config.is_decoder = False\n",
+    "\n",
+    "# create tokenizer\n",
+    "tokenizer = DEQBertTokenizer.from_pretrained(\"roberta-base\")\n",
+    "\n",
+    "# create the model\n",
+    "model = DEQBertForMaskedLM.from_pretrained(model_path)\n",
+    "\n",
+    "# create fill mask pipeline\n",
+    "fill_mask = pipeline(\"fill-mask\", model=model, tokenizer=tokenizer)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'<mask>'"
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenizer.mask_token"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[{'score': 0.06810760498046875,\n  'token': 169,\n  'token_str': ' way',\n  'sequence': 'This is a simple way.'},\n {'score': 0.055909670889377594,\n  'token': 65,\n  'token_str': ' one',\n  'sequence': 'This is a simple one.'},\n {'score': 0.027957143262028694,\n  'token': 3685,\n  'token_str': ' task',\n  'sequence': 'This is a simple task.'},\n {'score': 0.02436898462474346,\n  'token': 1114,\n  'token_str': ' idea',\n  'sequence': 'This is a simple idea.'},\n {'score': 0.020140115171670914,\n  'token': 1548,\n  'token_str': ' approach',\n  'sequence': 'This is a simple approach.'}]"
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fill_mask(\"This is a simple <mask>.\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
