Test parameter count of DEQ
it is small

--- a/deq_tests.ipynb
+++ b/deq_tests.ipynb
@@ -1630,24 +1630,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "outputs": [
     {
      "data": {
-      "text/plain": "[{'score': 0.06810760498046875,\n  'token': 169,\n  'token_str': ' way',\n  'sequence': 'This is a simple way.'},\n {'score': 0.055909670889377594,\n  'token': 65,\n  'token_str': ' one',\n  'sequence': 'This is a simple one.'},\n {'score': 0.027957143262028694,\n  'token': 3685,\n  'token_str': ' task',\n  'sequence': 'This is a simple task.'},\n {'score': 0.02436898462474346,\n  'token': 1114,\n  'token_str': ' idea',\n  'sequence': 'This is a simple idea.'},\n {'score': 0.020140115171670914,\n  'token': 1548,\n  'token_str': ' approach',\n  'sequence': 'This is a simple approach.'}]"
+      "text/plain": "[{'score': 0.3341638445854187,\n  'token': 5,\n  'token_str': ' the',\n  'sequence': 'The nurse notified the patient that the shift would be ending in an hour..'},\n {'score': 0.23835013806819916,\n  'token': 10,\n  'token_str': ' a',\n  'sequence': 'The nurse notified the patient that a shift would be ending in an hour..'},\n {'score': 0.036662112921476364,\n  'token': 42,\n  'token_str': ' this',\n  'sequence': 'The nurse notified the patient that this shift would be ending in an hour..'},\n {'score': 0.023208975791931152,\n  'token': 40,\n  'token_str': ' will',\n  'sequence': 'The nurse notified the patient that will shift would be ending in an hour..'},\n {'score': 0.01831670105457306,\n  'token': 18,\n  'token_str': \"'s\",\n  'sequence': \"The nurse notified the patient that's shift would be ending in an hour..\"}]"
      },
-     "execution_count": 17,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "fill_mask(\"This is a simple <mask>.\")"
+    "fill_mask(\"The nurse notified the patient that <mask> shift would be ending in an hour..\")"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Comparing the model parameter count"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "124697433"
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from transformers import RobertaForMaskedLM\n",
+    "RobertaForMaskedLM.from_pretrained(\"roberta-base\").num_parameters()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "48502617"
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.num_parameters()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The DEQ has 1/3 the parameter count of the Roberta model."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
     }
    }
   }
