Fix sequence max train length bug

--- a/deq_tests.ipynb
+++ b/deq_tests.ipynb
@@ -589,7 +589,11 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "31e9adbb-9485-4248-872f-f82d68c2c30a",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1576,14 +1580,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "182ef3ff",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\weipy\\mambaforge\\envs\\deqbert\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from DEQBert.modeling_deqbert import DEQBertForMaskedLM, DEQBertConfig\n",
     "from DEQBert.tokenization_deqbert import DEQBertTokenizer\n",
@@ -1602,12 +1615,12 @@
    "outputs": [],
    "source": [
     "config_path = \"DEQBert/model_card/config.json\"\n",
-    "model_path = \"models/base/checkpoint-45000\""
+    "model_path = \"models/lucas-cont/checkpoint-60000\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "d174aed5",
    "metadata": {
     "pycharm": {
@@ -1619,6 +1632,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "Downloading: 100%|██████████| 899k/899k [00:03<00:00, 256kB/s] \n",
+      "C:\\Users\\weipy\\mambaforge\\envs\\deqbert\\lib\\site-packages\\huggingface_hub\\file_download.py:127: UserWarning: `huggingface_hub` cache-system uses symlinks by default to efficiently store duplicated files but your machine does not support them in C:\\Users\\weipy\\.cache\\huggingface\\hub. Caching files will still work but in a degraded version that might require more space on your disk. This warning can be disabled by setting the `HF_HUB_DISABLE_SYMLINKS_WARNING` environment variable. For more details, see https://huggingface.co/docs/huggingface_hub/how-to-cache#limitations.\n",
+      "To support symlinks on Windows, you either need to activate Developer Mode or to run Python as an administrator. In order to see activate developer mode, see this article: https://docs.microsoft.com/en-us/windows/apps/get-started/enable-your-device-for-development\n",
+      "  warnings.warn(message)\n",
+      "Downloading: 100%|██████████| 456k/456k [00:02<00:00, 225kB/s]  \n",
+      "Downloading: 100%|██████████| 481/481 [00:00<00:00, 463kB/s]\n",
       "The tokenizer class you load from this checkpoint is not the same type as the class this function is called from. It may result in unexpected tokenization. \n",
       "The tokenizer class you load from this checkpoint is 'RobertaTokenizer'. \n",
       "The class this function is called from is 'DEQBertTokenizer'.\n"
@@ -1626,10 +1645,6 @@
     }
    ],
    "source": [
-    "# initialise the configs\n",
-    "config = DEQBertConfig.from_pretrained(config_path)\n",
-    "config.is_decoder = False\n",
-    "\n",
     "# create tokenizer\n",
     "tokenizer = DEQBertTokenizer.from_pretrained(\"roberta-base\")\n",
     "\n",
@@ -1642,32 +1657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "61d37516",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'<mask>'"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tokenizer.mask_token"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "c17ffedf",
    "metadata": {
     "pycharm": {
@@ -1677,30 +1667,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "[{'score': 0.3341638445854187,\n",
-       "  'token': 5,\n",
-       "  'token_str': ' the',\n",
-       "  'sequence': 'The nurse notified the patient that the shift would be ending in an hour..'},\n",
-       " {'score': 0.23835013806819916,\n",
-       "  'token': 10,\n",
-       "  'token_str': ' a',\n",
-       "  'sequence': 'The nurse notified the patient that a shift would be ending in an hour..'},\n",
-       " {'score': 0.036662112921476364,\n",
-       "  'token': 42,\n",
-       "  'token_str': ' this',\n",
-       "  'sequence': 'The nurse notified the patient that this shift would be ending in an hour..'},\n",
-       " {'score': 0.023208975791931152,\n",
-       "  'token': 40,\n",
-       "  'token_str': ' will',\n",
-       "  'sequence': 'The nurse notified the patient that will shift would be ending in an hour..'},\n",
-       " {'score': 0.01831670105457306,\n",
-       "  'token': 18,\n",
-       "  'token_str': \"'s\",\n",
-       "  'sequence': \"The nurse notified the patient that's shift would be ending in an hour..\"}]"
-      ]
+      "text/plain": "[{'score': 0.37471240758895874,\n  'token': 5,\n  'token_str': ' the',\n  'sequence': 'The nurse notified the patient that the shift would be ending in an hour..'},\n {'score': 0.1360352635383606,\n  'token': 10,\n  'token_str': ' a',\n  'sequence': 'The nurse notified the patient that a shift would be ending in an hour..'},\n {'score': 0.0531623512506485,\n  'token': 42,\n  'token_str': ' this',\n  'sequence': 'The nurse notified the patient that this shift would be ending in an hour..'},\n {'score': 0.04111242666840553,\n  'token': 18,\n  'token_str': \"'s\",\n  'sequence': \"The nurse notified the patient that's shift would be ending in an hour..\"},\n {'score': 0.013586561195552349,\n  'token': 74,\n  'token_str': ' would',\n  'sequence': 'The nurse notified the patient that would shift would be ending in an hour..'}]"
      },
-     "execution_count": 22,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
